// Generated by j5build v0.0.0-20250808004257-d0487faadfc4. DO NOT EDIT

syntax = "proto3";

package test.query.v1.service;

import "google/api/annotations.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/page.proto";
import "j5/list/v1/query.proto";
import "test/query/v1/foo.j5s.proto";

service FooService {
  rpc FooList(FooListRequest) returns (FooListResponse) {
    option (google.api.http) = {get: "/v1/foo"};
  }
}

message FooListRequest {
  option (j5.ext.v1.message).object = {};

  j5.list.v1.PageRequest page = 1 [(j5.ext.v1.field).object = {}];

  j5.list.v1.QueryRequest query = 2 [(j5.ext.v1.field).object = {}];
}

message FooListResponse {
  option (j5.ext.v1.message).object = {};

  repeated test.query.v1.FooState foo = 1 [(j5.ext.v1.field).array = {}];

  j5.list.v1.PageResponse page = 2 [(j5.ext.v1.field).object = {}];
}
